增加了上传图片按钮
增加了上传图片按钮：在发布新图文界面可以上传图片了

--- a/SimpleCloud/miniprogram/app.json
+++ b/SimpleCloud/miniprogram/app.json
@@ -2,7 +2,10 @@
   "pages": [
     "pages/index/index",
     "pages/databaseTest/databaseTest",
-    "pages/storageTest/storageTest"
+    "pages/storageTest/storageTest",
+    "pages/publish/text/text",
+    "pages/publish/meet/meet",
+    "pages/publish/checkin/checkin"
   ],
   "window": {
     "backgroundTextStyle": "light",
