--- a/SimpleCloud/miniprogram/app.json
+++ b/SimpleCloud/miniprogram/app.json
@@ -13,6 +13,11 @@
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
   },
+  "permission":{
+    "scope.userLocation": {
+      "desc": "你的位置信息是消息的必要组成部分"
+    }
+  },
   "sitemapLocation": "sitemap.json",
   "style": "v2"
 }
