前端比较完整的第一版

--- a/Map/app.json
+++ b/Map/app.json
@@ -2,7 +2,10 @@
   "pages": [ 
     "pages/login/login",
     "pages/map/map",
-    "pages/setting/setting"
+    "pages/setting/setting",
+    "pages/publish/text/text",
+    "pages/publish/meet/meet",
+    "pages/publish/checkin/checkin"
   ],
   "window": {
     "backgroundTextStyle": "light",
