数据库添加树洞

--- a/Map/project.config.json
+++ b/Map/project.config.json
@@ -24,6 +24,7 @@
 	"isGameTourist": false,
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"cloudfunctionRoot": "cloudfunctions/",
 	"condition": {
 		"search": {
 			"current": -1,
