--- a/Map/app.json
+++ b/Map/app.json
@@ -3,6 +3,8 @@
     "pages/login/login",
     "pages/map/map",
     "pages/setting/setting",
+    "pages/userpage/posts/posts",
+    "pages/userpage/collections/collections",
     "pages/publish/text/text",
     "pages/publish/meet/meet",
     "pages/publish/checkin/checkin"
