--- a/Map/app.json
+++ b/Map/app.json
@@ -3,10 +3,12 @@
     "pages/login/login",
     "pages/map/map",
     "pages/setting/setting",
-    "pages/read/read",
+    "pages/userpage/posts/posts",
+    "pages/userpage/collections/collections",
     "pages/publish/text/text",
     "pages/publish/meet/meet",
-    "pages/publish/checkin/checkin"
+    "pages/publish/checkin/checkin",
+    "pages/show/text/text"
   ],
   "window": {
     "backgroundTextStyle": "light",
