--- a/Map/app.json
+++ b/Map/app.json
@@ -5,6 +5,7 @@
     "pages/setting/setting",
     "pages/userpage/posts/posts",
     "pages/userpage/collections/collections",
+    "pages/userpage/messages/messages",
     "pages/publish/text/text",
     "pages/publish/meet/meet",
     "pages/publish/help/help",
