--- a/Map/app.json
+++ b/Map/app.json
@@ -14,9 +14,9 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#66ccff",
+    "navigationBarBackgroundColor": "#39b54a",
     "navigationBarTitleText": "字条罗盘",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "white"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
