--- a/Map/app.json
+++ b/Map/app.json
@@ -4,7 +4,6 @@
     "pages/map/map",
     "pages/setting/setting",
     "pages/userpage/posts/posts",
-    "pages/userpage/collections/collections",
     "pages/userpage/homepage/homepage",
     "pages/publish/text/text",
     "pages/publish/meet/meet",
@@ -15,7 +14,7 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#66ccff",
     "navigationBarTitleText": "字条罗盘",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "white"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
