标题配色改为绿色，帖子显示优化

--- a/Map/app.json
+++ b/Map/app.json
@@ -13,7 +13,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#66ccff",
+    "navigationBarBackgroundColor": "#39b54a",
     "navigationBarTitleText": "字条罗盘",
     "navigationBarTextStyle": "white"
   },
