(1)加上了好友界面(2)完善了用户界面，点"关注"能链接到好友界面，并且做了未关注/已关注的按钮切换（前端+后端）

--- a/Map/app.json
+++ b/Map/app.json
@@ -10,7 +10,8 @@
     "pages/publish/help/help",
     "pages/publish/vote/vote",
     "pages/heatmap/heatmap",
-    "pages/show/text/text"
+    "pages/show/text/text",
+    "pages/userpage/friends/friends"
   ],
   "window": {
     "backgroundTextStyle": "light",
